@@ -2,6 +2,7 @@
 
 	* lib/regex.c (dfsch_regex_register): Simple (match/no match) regular 
 	expression support... and now with code :)
+	(regex_finalizer): finalization of regex objects
 
 	* scm/supermarket.scm: Exit after predefined number of iterations, 
 	do not loop forever
